# turtlebot3_ws

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  error.txt  fix_formatting.sh  frames_2024-10-05_13.23.42.gv  pyproject.toml  start_turtlebot3.sh  tf_info.txt  tree.txt  turtlebot3.repos
.github/workflows/: dependabot.yml  ros2-ci.yml  ros2-tests.yaml
.github/workflows/tests/: pytest.ini  test_xbox_teleop.py
src/dashboard_turtlebot3_cpp/: CMakeLists.txt  package.xml
src/dashboard_turtlebot3_cpp/include/dashboard_turtlebot3_cpp/: dashboard_node.hpp
src/dashboard_turtlebot3_cpp/src/: dashboard_node.cpp
src/oakd_lite_turtlebbot3/: CMakeLists.txt
src/oakd_lite_turtlebot3/: CMakeLists.txt  package.xml
src/oakd_lite_turtlebot3/launch/: oakd_lite.launch.py  turtlebot3_oakd_nav2.launch.py
src/qt5_webcam_viewer/: CMakeLists.txt  package.xml
src/qt5_webcam_viewer/src/: webcam_viewer.cpp
src/slam_toolbox_tb3/: CMakeLists.txt  package.xml
src/slam_toolbox_tb3/config/: BACKUP slam_toolbox_params.yaml  slam_toolbox_params.yaml
src/slam_toolbox_tb3/launch/: slam_and_rviz_launch.py  slam_toolbox_launch.py  slam_toolbox_tb3_launch.py
src/turtlebot3_dingo/: ISSUE_TEMPLATE.md  README.md  dingo_turtlebot3_commands.sh  turtlebot3_ci.repos
src/turtlebot3_dingo/turtlebot3/: CMakeLists.txt
src/turtlebot3_dingo/turtlebot3_bringup/: CMakeLists.txt
src/turtlebot3_dingo/turtlebot3_bringup/launch/: dingo.robot.launch.py  laptop.robot.launch.py  robot.launch.py  turtlebot3_state_publisher.launch.py
src/turtlebot3_dingo/turtlebot3_cartographer/: CMakeLists.txt
src/turtlebot3_dingo/turtlebot3_cartographer/launch/: cartographer.launch.py  occupancy_grid.launch.py
src/turtlebot3_dingo/turtlebot3_description/: CMakeLists.txt
src/turtlebot3_dingo/turtlebot3_description/urdf/: common_properties.urdf  turtlebot3_burger.urdf
src/turtlebot3_dingo/turtlebot3_example/: setup.py
src/turtlebot3_dingo/turtlebot3_example/turtlebot3_example/turtlebot3_obstacle_detection/: main.py  turtlebot3_obstacle_detection.py
src/turtlebot3_dingo/turtlebot3_example/turtlebot3_example/turtlebot3_patrol_client/: main.py  turtlebot3_patrol_client.py
src/turtlebot3_dingo/turtlebot3_example/turtlebot3_example/turtlebot3_patrol_server/: main.py  turtlebot3_path.py  turtlebot3_patrol_server.py
src/turtlebot3_dingo/turtlebot3_example/turtlebot3_example/turtlebot3_position_control/: main.py  turtlebot3_path.py  turtlebot3_position_control.py
src/turtlebot3_dingo/turtlebot3_navigation2/: CMakeLists.txt  package.xml
src/turtlebot3_dingo/turtlebot3_navigation2/launch/: dingo.navigation2.launch.py  navigation2.launch.py
src/turtlebot3_dingo/turtlebot3_navigation2/param/: BACKUP_burger.yaml  burger.yaml  burger1.yaml  waffle.yaml  waffle_pi.yaml
src/turtlebot3_dingo/turtlebot3_node/: CMakeLists.txt  package.xml
src/turtlebot3_dingo/turtlebot3_teleop/: setup.py
src/turtlebot3_dingo/turtlebot3_teleop/turtlebot3_teleop/script/: teleop_keyboard.py
src/turtlebot3_dingo/xbox_turtlebot3_teleop/: CMakeLists.txt  package.xml  pytest.ini  setup.cfg  setup.py  xbox-tests.py
src/turtlebot3_dingo/xbox_turtlebot3_teleop/launch/: xbox_teleop.launch.py
src/turtlebot3_dingo/xbox_turtlebot3_teleop/test/: test_xbox_teleop.py
src/turtlebot3_dingo/xbox_turtlebot3_teleop/xbox_turtlebot3_teleop/: xbox_teleop_node.py
src/turtlebot3_webcam/: CMakeLists.txt  package.xml
src/turtlebot3_webcam/launch/: camera_viewer.launch.py
src/turtlebot3_webcam/src/: camera_publisher.cpp  camera_publisher.cpp.bak  camera_viewer.cpp  camera_viewer.cpp.bak
src/wifi_shutdown_monitor/: README.md  package.xml  setup.cfg  setup.py  tree.txt
src/wifi_shutdown_monitor/launch/: wifi_monitor.launch.py
src/wifi_shutdown_monitor/wifi_shutdown_monitor/: wifi_monitor.py  wifi_monitor_node.py
