<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_webcam</name>
  <version>0.0.0</version>
  <description>TurtleBot3 Webcam package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>std_msgs</depend>
  <depend>rmw_fastrtps_cpp</depend>
  <depend>libcurl-dev</depend>  <!-- Added -->

  <build_depend>libopencv-dev</build_depend>
  <build_depend>libudev-dev</build_depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>v4l2-camera</exec_depend>
  <exec_depend>libcurl4</exec_depend>  <!-- Added -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
